fixed music resetting bug at certain times when weather effects were not enabled (ex:10am)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ bin/background/ac_background.png
 bin/background/ac_background2.png
 bin/background/images.png
 bin/background/sunset2.png
+ACAMP-win32-x64
+ACAMP electron - Shortcut.lnk
